feat: 问诊会话图重构 + 知识点薄弱分析 + 移动端页面完善
- ai: 咨询流程图(consultation_graph/toolkit)、模型网关、LLM客户端增强、prompt调整
- backend: 薄弱知识点分析服务、推荐服务增强、内部回调同步定义补齐
- mobile: 首页/聊天/报告/思考树/仪表盘等页面重构，底部导航与路由调整